--- a/templates/about.html
+++ b/templates/about.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}
-<title>Django Snacks Home Page</title>
+<title>Django Snacks About Page</title>
 {% endblock title %}
 
 {% block mainh1 %}
-<h1>This is my Home Page</h1>
+<h1>This is my About Page</h1>
 {% endblock mainh1 %}
